réarrangement des boutons menu

--- a/index.html
+++ b/index.html
@@ -77,14 +77,12 @@
             <nav class="navigation navbar-collapse collapse navbar-right" id="navigation">
                 <!-- NAVIGATION LINKS -->
                 <ul class="nav navbar-nav" id="header-nav">
-                    <li>
-                        <a href="#about">A Propos</a>
-                    </li>
                     <li><a href="#keynotes">Keynotes</a></li>
+                    <li><a href="#about">A Propos</a></li>
                     <!--<li><a href="#videos">Vidéos</a></li>-->
-                    <li><a href="#coachs">Coachs &amp; Jury</a>
                     <li><a href="#how-it-works">Planning</a></li>
-                    <!--<li><a href="#prizes">Prix</a>-->
+                    <li><a href="#coachs">Coachs &amp; Jury</a>
+                        <!--<li><a href="#prizes">Prix</a>-->
                     <!--<li><a href="#winners">Résultats</a>-->
                     <li><a href="#sponsors">Partenaires</a></li>
                     <li><a href="#faq">FAQ</a></li>
