--- a/de/index.html
+++ b/de/index.html
@@ -1575,7 +1575,7 @@
                         </div>
                         <div class="faq-item">
                             <span class="faq-item-icon fa fa-question-circle"></span>
-                            <h4 class="faq-item-heading">Ich habe Sonntags Fußball. Kann ich trozdemn teilnehmen?</h4>
+                            <h4 class="faq-item-heading">Ich habe am Sonntag Fußball. Kann ich trozdemn teilnehmen?</h4>
                             <div class="faq-item-text">Wenn Sie eine Weile weg sein müssen: Aquaponey, Zahnarzt, Essen mit der Schwiegermutter, kein Problem! Sie müssen lediglich Ihr Team informieren und sich gemeinsam organisieren.
                                 <!--Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !-->
                             </div>
