--- a/en/index.html
+++ b/en/index.html
@@ -1586,7 +1586,7 @@
                     </div>
                     <div class="faq-item">
                         <span class="faq-item-icon fa fa-question-circle"></span>
-                        <h4 class="faq-item-heading">Ich have soccer on Sunday. Can I still participate?</h4>
+                        <h4 class="faq-item-heading">I have soccer on Sunday. Can I still participate?</h4>
                         <div class="faq-item-text">If you have to be away for a while: aquaponey, dentist, meal with the mother-in-law, no problem! All you have to do is inform your team and organize yourself collectively.
                             <!--Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !-->
                         </div>
