changed one conference and fixed reglement

--- a/de/index.html
+++ b/de/index.html
@@ -330,10 +330,10 @@
                             pragmatischer?
                         </p>
                     </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    <p>
+                        Keynote in English</a><br>
                     </p>
-                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                    <!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
                             alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
                     <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">Ich gehe zur Konferenz!</a></div>
