--- a/en/index.html
+++ b/en/index.html
@@ -337,9 +337,9 @@
                             the success of these various situations requires to be aware of the differences point of view, work habits, process. Seen on this side of the Rhine, German would be really more pragmatic?
                         </p>
                     </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
-                    </p>
+                    <p>
+                        Keynote in English</a><br>
+                    <!--</p>
                     <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
                             alt="CCI Alsace" src="../images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
