--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
                             plus pragmatique ?
                         </p>
                     </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
-                    </p>
+                    <p>
+                        Keynote en Anglais</a><br>
+                        <!--</p>
                     <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
                             alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
