--- a/index.html
+++ b/index.html
@@ -938,6 +938,56 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Widad ZAGHLOUL" class="team-member-picture"
+                     src="images/contents/coach/widad-zaghloul.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Widad ZAGHLOUL</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Jonathan HURTER" class="team-member-picture"
+                     src="images/contents/coach/jonathan-hurter.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Jonathan HURTER</h4>
+                    <div class="team-member-position">Scalingo</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Eric NIAKISSA" class="team-member-picture"
+                     src="images/contents/coach/eric-niakissa.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Eric NIAKISSA</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Gilles NOEPPEL" class="team-member-picture"
+                     src="images/contents/coach/gilles-noeppel.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Gilles NOEPPEL</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Frédéric SOULIER" class="team-member-picture"
+                     src="images/contents/coach/nophoto.png">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Frédéric SOULIER</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
     </section>
     <!--
     <section class="team-section section" style="padding-top: 0;">
@@ -1262,14 +1312,14 @@
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
                         <img alt="Tamim DAOUDI" class="team-member-picture" src="images/contents/jury/tamim-daoudi.jpg">
-                        <div class="team-member-text">
+                        <div class="team-member-text" style="padding-bottom: 30px">
                             <h4 class="team-member-name">Tamim DAOUDI</h4>
                             <div class="team-member-position">Président de CREACCRO</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-                    <div class="team-member">
+                    <div class="team-member even">
                         <img alt="Pascal WESPISER" class="team-member-picture" src="images/contents/jury/pascal-wespiser.jpg">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Pascal WESPISER</h4>
@@ -1287,7 +1337,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-                    <div class="team-member">
+                    <div class="team-member even">
                         <img alt="Yann LEDU" class="team-member-picture" src="images/contents/coach/nophoto.png">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Yann LEDU</h4>
@@ -1300,6 +1350,33 @@
                         <img alt="Anne-Marie JEAN" class="team-member-picture" src="images/contents/jury/anne-marie-jean.jpg">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Anne-Marie JEAN</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member even">
+                        <img alt="Nathalie GARTISER" class="team-member-picture" src="images/contents/coach/nophoto.png">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Nathalie GARTISER</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member">
+                        <img alt="Muriel HUBER" class="team-member-picture" src="images/contents/coach/nophoto.png">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Muriel HUBER</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member even">
+                        <img alt="Lina TREMISI" class="team-member-picture" src="images/contents/jury/lina-tremisi.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Lina TREMISI</h4>
                             <div class="team-member-position"></div>
                         </div>
                     </div>
@@ -1490,8 +1567,8 @@
                 <h3 style="font-size: 17px;">Silver Sponsors</h3>
                 <br>
                 <!--<a href="http://www.caisse-epargne.fr/" target="_blank"><img alt="Caisse d'Epargne Alsace" src="images/contents/caisse-epargne.jpg"></a>-->
-                <a href="http://www.hagergroup.com/" target="_blank"><img alt="Hager"
-                                                                          src="images/contents/hager-group.png"></a>
+                <!--<a href="http://www.hagergroup.com/" target="_blank"><img alt="Hager"
+                                                                          src="images/contents/hager-group.png"></a>-->
                 <a href="http://www.rhenatic.eu/" target="_blank"><img alt="Rhénatic"
                                                                        src="images/contents/rhenatic.png"
                                                                        style="width: 180px;"></a>
