ajout d'un coach et d'un logo

--- a/de/index.html
+++ b/de/index.html
@@ -330,9 +330,10 @@
                             pragmatischer?
                         </p>
                     </div>
-                    <p>
-                        Keynote in English</a><br>
-                    </p>
+                    <a>
+                        Keynote in English
+                    </a>
+                    <br>
                     <!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
                             alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
@@ -362,7 +363,7 @@
                 <div class="about-text col-md-3">
                     <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 14:30 bis 15:30 Uhr</h3>
 
-                    <img alt="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie" src="../images/contents/conference3.jpg.jpg"
+                    <img alt="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie" src="../images/contents/conference3.jpg"
                          style="width: 100%;" title="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie"/>
 
                     <h3>DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie</h3>
@@ -440,7 +441,7 @@
                         während des gesamten Wochenendes gegeneinander an, um Prototypen von Anwendungen, verbundenen
                         Geräten usw. zu erfinden und zu
                         entwickeln. Hier treffen sich Communities und konfrontieren viele Ideen mit einem Ziel:
-                        Innovation!
+                        Innovation!</p>
                         <ul class="icon-list">
                             <li>
                                 <span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
@@ -962,6 +963,16 @@
                      src="../images/contents/coach/nophoto.png">
                 <div class="team-member-text">
                     <h4 class="team-member-name">Frédéric SOULIER</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Thomas AMSTOUTZ" class="team-member-picture"
+                     src="../images/contents/coach/thomas-amstoutz.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Thomas AMSTOUTZ</h4>
                     <div class="team-member-position"></div>
                 </div>
             </div>
@@ -1563,9 +1574,9 @@
                                                                               width="160"></a>
                 <a href="https://www.strasbourgaimesesetudiants.eu/" target="_blank"><img
                         alt="Strasbourg aime ses étudiants" src="../images/contents/strasetudiants.png" width="300"></a>
+                <a href="http://www.espacealpin.fr/" target="_blank"><img alt="Interreg Alpine Space" src="../images/contents/interregspace.jpg" width="300"></a>
                 <!-- devient partenaire Lundi 17/06/2019 -->
-                <a href="https://upperrhine40.eu/" target="_blank"><img alt=""
-                                                                        src="../images/contents/interreg2018.jpg"><br></a>
+                <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="../images/contents/interreg2018.jpg"><br></a>
                 <!-- inclus dans upper rhine-->
             </div>
 
