--- a/en/index.html
+++ b/en/index.html
@@ -337,8 +337,9 @@
                             the success of these various situations requires to be aware of the differences point of view, work habits, process. Seen on this side of the Rhine, German would be really more pragmatic?
                         </p>
                     </div>
-                    <p>
-                        Keynote in English</a><br>
+                    <a>
+                        Keynote in English
+                    </a><br>
                     <!--</p>
                     <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
@@ -974,6 +975,16 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Thomas AMSTOUTZ" class="team-member-picture"
+                     src="../images/contents/coach/thomas-amstoutz.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Thomas AMSTOUTZ</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
     </section>
     <!--
          <section class="team-section section" style="padding-top: 0;">
@@ -1573,9 +1584,9 @@
                                                                               width="160"></a>
                 <a href="https://www.strasbourgaimesesetudiants.eu/" target="_blank"><img
                         alt="Strasbourg aime ses étudiants" src="../images/contents/strasetudiants.png" width="300"></a>
+                <a href="http://www.espacealpin.fr/" target="_blank"><img alt="Interreg Alpine Space" src="../images/contents/interregspace.jpg" width="300"></a>
                 <!-- devient partenaire Lundi 17/06/2019 -->
-                <a href="https://upperrhine40.eu/" target="_blank"><img alt=""
-                                                                        src="../images/contents/interreg2018.jpg"><br></a>
+                <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="../images/contents/interreg2018.jpg"><br></a>
                 <!-- inclus dans upper rhine-->
             </div>
 
