--- a/index.html
+++ b/index.html
@@ -315,8 +315,10 @@
                             plus pragmatique ?
                         </p>
                     </div>
-                    <p>
-                        Keynote en Anglais</a><br>
+                    <a>
+                        Keynote en Anglais
+                    </a>
+                    <br>
                         <!--</p>
                     <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
                                                                                            target="_blank"><img
@@ -984,6 +986,16 @@
                      src="images/contents/coach/nophoto.png">
                 <div class="team-member-text">
                     <h4 class="team-member-name">Frédéric SOULIER</h4>
+                    <div class="team-member-position"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member">
+                <img alt="Thomas AMSTOUTZ" class="team-member-picture"
+                     src="images/contents/coach/thomas-amstoutz.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Thomas AMSTOUTZ</h4>
                     <div class="team-member-position"></div>
                 </div>
             </div>
@@ -1671,12 +1683,10 @@
                 <a href="https://www.impact-positif.fr/" target="_blank"><img alt="Impact positif"
                                                                               src="images/contents/logo-square.jpg"
                                                                               width="160"></a>
-                <a href="https://www.strasbourgaimesesetudiants.eu/" target="_blank"><img
-                        alt="Strasbourg aime ses étudiants" src="images/contents/strasetudiants.png"
-                        width="300"></a>
+                <a href="https://www.strasbourgaimesesetudiants.eu/" target="_blank"><img alt="Strasbourg aime ses étudiants" src="images/contents/strasetudiants.png" width="300"></a>
+                <a href="http://www.espacealpin.fr/" target="_blank"><img alt="Interreg Alpine Space" src="images/contents/interregspace.jpg" width="300"></a>
                 <!-- devient partenaire Lundi 17/06/2019 -->
-                <a href="https://upperrhine40.eu/" target="_blank"><img alt=""
-                                                                        src="images/contents/interreg2018.jpg"><br></a>
+                <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="images/contents/interreg2018.jpg"><br></a>
                 <!-- inclus dans upper rhine-->
             </div>
             <!--<div class="sponsors-row" data-animation="bounceIn">
