--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="document" id="document">
     <!-- HEADER
 ================================= -->
-    <header class="header-section section section-dark navbar navbar-fixed-top" id="header">
+    <header class="header-section section section-dark navbar navbar-fixed-top" id="header" style="background: rgba(0,0,0,0.8);">
         <div class="container-fluid">
             <div class="navbar-header navbar-left">
                 <!-- RESPONSIVE MENU BUTTON -->
@@ -118,6 +118,24 @@
                                                                   src="images/logos/AD-logo-132x132.png"
                                                                   title="par AlsaceDigitale"> </a>
     </div>
+
+    <section class="headline-section section-accent section" style="padding-bottom: 30px; padding-top: 90px;">
+
+        <div class="container">
+          
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+
+              <h3 class="text-center">LIVE : suivez le reportage rédactionnel du HIC 2019</h3>
+
+              <div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="http://live.hackingindustry.camp/" class="btn btn-lg btn-primary">live.hackingindustry.camp</a></div>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+
     <!-- HERO
 ================================= -->
     <section class="hero-section hero-layout-classic hero-layout-video-and-features-cta section section-dark" id="hero"
