fix link live reporting

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
               <h3 class="text-center">LIVE : suivez le reportage rédactionnel du HIC 2019</h3>
 
-              <div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="http://live.hackingindustry.camp/" class="btn btn-lg btn-primary">live.hackingindustry.camp</a></div>
+              <div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="https://medium.com/@AlsaceDigitale/en-direct-live-du-hacking-industry-camp-2019-cc06732d6491 " class="btn btn-lg btn-primary">live.hackingindustry.camp</a></div>
             </div>
           </div>
 
