changement d'un jury

--- a/de/index.html
+++ b/de/index.html
@@ -1198,10 +1198,10 @@
             <div class="team-row row">
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Tamim DAOUDI" class="team-member-picture" src="../images/contents/jury/tamim-daoudi.jpg">
+                        <img alt="Michel HUSSHERR" class="team-member-picture" src="../images/contents/jury/michel-hussherr.jpg">
                         <div class="team-member-text">
-                            <h4 class="team-member-name">Tamim DAOUDI</h4>
-                            <div class="team-member-position">Präsident von CREACCRO</div>
+                            <h4 class="team-member-name">Michel HUSSHER</h4>
+                            <div class="team-member-position"></div>
                         </div>
                     </div>
                 </div>
@@ -1656,8 +1656,7 @@
                             <span class="faq-item-icon fa fa-question-circle"></span>
                             <h4 class="faq-item-heading">Muss ich einen Laptop mitbringen?</h4>
                             <div class="faq-item-text">Die Teilnehmer bringen ihre Laptops und wenn möglich eine
-                                Steckdosenleiste mit.<br>Unsere Sponsoren stellen einige Ressourcen zur Verfügung
-                                (weitere Informationen folgen in Kürze).
+                                Steckdosenleiste mit.<br>
                                 <!--Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !-->
                             </div>
                         </div>
@@ -1681,7 +1680,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="faq-row row">
