--- a/en/index.html
+++ b/en/index.html
@@ -1208,10 +1208,10 @@
             <div class="team-row row">
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Tamim DAOUDI" class="team-member-picture" src="../images/contents/jury/tamim-daoudi.jpg">
+                        <img alt="Michel HUSSHERR" class="team-member-picture" src="../images/contents/jury/michel-hussherr.jpg">
                         <div class="team-member-text">
-                            <h4 class="team-member-name">Tamim DAOUDI</h4>
-                            <div class="team-member-position">President of CREACCRO</div>
+                            <h4 class="team-member-name">Michel HUSSHERR</h4>
+                            <div class="team-member-position"></div>
                         </div>
                     </div>
                 </div>
@@ -1667,8 +1667,7 @@
                         <span class="faq-item-icon fa fa-question-circle"></span>
                         <h4 class="faq-item-heading">Do I need to bring a laptop?</h4>
                         <div class="faq-item-text">Attendees bring their laptops and if possible an electrical power
-                            strip.<br>Our sponsors will
-                            make some ressources available (more info coming soon)
+                            strip.<br>
                             <!--Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !-->
                         </div>
                     </div>
