--- a/index.html
+++ b/index.html
@@ -1341,10 +1341,10 @@
             <div class="team-row row">
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Tamim DAOUDI" class="team-member-picture" src="images/contents/jury/tamim-daoudi.jpg">
+                        <img alt="Michel HUSSHER" class="team-member-picture" src="images/contents/jury/michel-hussherr.jpg">
                         <div class="team-member-text" style="padding-bottom: 30px">
-                            <h4 class="team-member-name">Tamim DAOUDI</h4>
-                            <div class="team-member-position">Président de CREACCRO</div>
+                            <h4 class="team-member-name">Michel HUSSHERR</h4>
+                            <div class="team-member-position"></div>
                         </div>
                     </div>
                 </div>
