ajouts photos jury

--- a/de/index.html
+++ b/de/index.html
@@ -1216,7 +1216,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Daniel WAGNER" class="team-member-picture" src="../images/contents/coach/nophoto.png">
+                        <img alt="Daniel WAGNER" class="team-member-picture" src="../images/contents/jury/daniel-wagner.jpg">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Daniel WAGNER</h4>
                             <div class="team-member-position"></div>
@@ -1243,7 +1243,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Nathalie GARTISER" class="team-member-picture" src="../images/contents/jury/nathalie-gartiser.jpg">
+                        <img alt="Nathalie GARTISER" class="team-member-picture" src="../images/contents/jury/nathalie-gartiser.jpg" style="max-height: 320px">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Nathalie GARTISER</h4>
                             <div class="team-member-position"></div>
@@ -1252,7 +1252,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Muriel HUBER" class="team-member-picture" src="../images/contents/coach/nophoto.png">
+                        <img alt="Muriel HUBER" class="team-member-picture" src="../images/contents/jury/muriel-huber.jpg" style="max-height: 320px">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Muriel HUBER</h4>
                             <div class="team-member-position"></div>
