--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Daniel WAGNER" class="team-member-picture" src="images/contents/coach/nophoto.png">
+                        <img alt="Daniel WAGNER" class="team-member-picture" src="images/contents/jury/daniel-wagner.jpg">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Daniel WAGNER</h4>
                             <div class="team-member-position"></div>
@@ -1386,7 +1386,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member even">
-                        <img alt="Nathalie GARTISER" class="team-member-picture" src="images/contents/coach/nophoto.png">
+                        <img alt="Nathalie GARTISER" class="team-member-picture" src="images/contents/coach/nophoto.png" style="max-height: 320px">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Nathalie GARTISER</h4>
                             <div class="team-member-position"></div>
@@ -1395,7 +1395,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Muriel HUBER" class="team-member-picture" src="images/contents/coach/nophoto.png">
+                        <img alt="Muriel HUBER" class="team-member-picture" src="images/contents/jury/muriel-huber.jpg" style="max-height: 320px">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Muriel HUBER</h4>
                             <div class="team-member-position"></div>
