--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
 
-              <h3 class="text-center">LIVE : suivez le reportage rédactionnel du HIC 2019</h3>
+              <h3 class="text-center">L'édition 2019 est déjà terminée, mais ce n'est que le début pour vos projets !</h3>
 
-              <div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="https://medium.com/@AlsaceDigitale/en-direct-live-du-hacking-industry-camp-2019-cc06732d6491 " class="btn btn-lg btn-primary">live.hackingindustry.camp</a></div>
+              <div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="https://medium.com/@AlsaceDigitale/en-direct-live-du-hacking-industry-camp-2019-cc06732d6491 " class="btn btn-lg btn-primary">REVIVRE L'EVENEMENT</a></div>
             </div>
           </div>
 
