--- a/en/index.html
+++ b/en/index.html
@@ -1426,35 +1426,30 @@
                  </div>
 
              </section>
+-->
+    <section class="section" id="winners">
 
-             <section id="winners" class="section">
+        <div class="container">
 
-                 <div class="container">
+            <h2 class="section-heading text-center">The results</h2>
 
-                     <h2 class="section-heading text-center">Les résultats</h2>
+            <p class="col-md-12 text-center">No less than 12 prototypes of projects have come out of this 2019 edition, and 9 of them have been awarded</p>
 
-                     <p class="col-md-12 text-center">Pas moins de 12 prototypes de projets sont sortis de cette édition 2017, et 10 d'entre eux ont été primés</strong></p>
+            <ul class="col-md-8 col-md-offset-2" style="padding-left: 50px;">
+                <li><i class="fa fa-trophy"></i> First price : <a href="https://hic2019.sparkboard.com/project/5d5174bccb58c30024e55f8b" target="_blank"> #4 - "SOS Environnement"</a></li>
+                <li><i class="fa fa-trophy"></i> Second price : <a href="https://hic2019.sparkboard.com/project/5d970c495413670024060e1a" target="_blank">#26 - "Réduire les retards des trains"</a></li>
+                <li><i class="fa fa-trophy"></i> Third price : <a href="https://hic2019.sparkboard.com/project/5d77682c53126300243fc9f9  " target="_blank">#6 - "Inside Renov"</a></li>
+                <li><i class="fa fa-trophy"></i> Mention best innovation : <a href="https://hic2019.sparkboard.com/project/5d795fac8d9dc500248f84ee" target="_blank">#10 - "LIoT Secure"</a></li>
+                <li><i class="fa fa-trophy"></i> Mention best service solution : <a href="https://hic2019.sparkboard.com/project/5d7a0ed5aff6130024622d27" target="_blank">#12 - "Gymnase Intelligent 4.0"</a></li>
+                <li><i class="fa fa-trophy"></i> Mention best IOT proposal : <a href="https://hic2019.sparkboard.com/project/5d80d6615ad10f0024d36109" target="_blank"> #16 - "GreatAir"</a></li>
+                <li><i class="fa fa-trophy"></i> Mention best Tech4good solution : <a href="https://hic2019.sparkboard.com/project/5d9f9fd96369610024c403fe" target="_blank">#31 - "Compost-IT"</a></li>
+                <li><i class="fa fa-trophy"></i> Mention best pitch : <a href="https://hic2019.sparkboard.com/project/5d959879e711020024ccc800" target="_blank">#25 - "Okazoo"</a></li>
+                <li><i class="fa fa-trophy"></i> Surprise mention : <a href="https://hic2019.sparkboard.com/project/5d444fe75063e80024d7056a" target="_blank">#3 - "Visu Van"</a></li>
+            </ul>
 
-                     <ul class="col-md-8 col-md-offset-2" style="padding-left: 50px;">
-                         <li><i class="fa fa-trophy"></i> Prix ÉS : <a href="https://hic2017.sparkboard.com/project/59d36f5404f56904009bd097" target="_blank"> #15 - "UnIoTy : Le Réseau social des objets connectés"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="https://hic2017.sparkboard.com/project/59b034ef9c32bb04003c9b52" target="_blank">#10 - "SniffElec"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Strataggem : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Scalingo 1 (1000€) : <a href="https://hic2017.sparkboard.com/project/59dcf77e1bf4390400c673b6" target="_blank">#23 - "ParkBnB"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Scalingo 2 (500€) : <a href="https://hic2017.sparkboard.com/project/59d36f5404f56904009bd097" target="_blank"> #15 - "UnIoTy : Le Réseau social des objets connectés"</a></li>
-                         <li><i class="fa fa-trophy"></i> Alsace Innovation: <a href="https://hic2017.sparkboard.com/project/59ce3ca58fa36004004a0f1e" target="_blank">#13  - "Smart Maintenance"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Alsace Digitale : <a href="https://hic2017.sparkboard.com/project/59afe3799c32bb04003c9b43" target="_blank">#9 - "EcoCatch"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix ITS Future + Agora Calycé : <a href="https://hic2017.sparkboard.com/project/59d2916d04f56904009bd072" target="_blank">#14 - "WellBee"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Thurmelec : <a href="https://hic2017.sparkboard.com/project/59d2916d04f56904009bd072" target="_blank">#14 - "WellBee"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix PRGlobalMedia : <a href="https://hic2017.sparkboard.com/project/59da88ba580b81040089ea25" target="_blank">#19  - "Jean Bois"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Alsa Calcul : <a href="https://hic2017.sparkboard.com/project/59cb70a8a77a850400bff31c" target="_blank">#12 - "Majord'Home"</a></li>
-                         <li><i class="fa fa-trophy"></i> Prix Caisse d'Epargne : <a href="https://hic2017.sparkboard.com/project/59d5f545cf3549040034d18e" target="_blank">#17 - "SuperKop"</a></li>
-                     </ul>
+        </div>
 
-                 </div>
-
-             </section>-->
-
+    </section>
 
     <!-- SPONSORS
     ================================= -->
