fix https issues

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 ================================= -->
     <!-- GOOGLE FONTS -->
     <link
-      href="http://fonts.googleapis.com/css?family=Montserrat:400,700"
+      href="//fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
     />
     <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+      href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
       rel="stylesheet"
     />
     <!-- LIBRARIES CSS -->
@@ -679,7 +679,7 @@
     <a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
           </div>
           <div class="footer-socmed">
-            <a href="http://facebook.com/alsace.digitale" target="_blank"
+            <a href="https://facebook.com/alsace.digitale" target="_blank"
               ><span class="fa fa-facebook"></span
             ></a>
             <a href="https://twitter.com/AlsaceDigitale" target="_blank"
